fix(item): add min-height to item-inner to remove gap between items
fixes #5350

--- a/ionic/components/item/item.scss
+++ b/ionic/components/item/item.scss
@@ -30,7 +30,8 @@
   padding: 0;
   border: 0;
   overflow: hidden;
-
+  min-height:inherit;
+  
   flex: 1;
   flex-direction: inherit;
   align-items: inherit;
